Joshua/codegen/parser.output
Terminals which are not used

   T_String


Grammar

    0 $accept: Start $end

    1 Start: Method

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen T_Return Type T_Lcurly BodyReturn T_Rcurly Method
    3       | /* empty */

    4 ParamList: T_Identifier MoreParams T_Colon Type ParamsAddl
    5          | /* empty */

    6 MoreParams: T_Comma T_Identifier MoreParams
    7           | /* empty */

    8 ParamsAddl: T_Semicolon ParamList
    9           | ParamList

   10 Type: T_Integer
   11     | T_Char
   12     | T_Charptr
   13     | T_Intptr
   14     | T_Bool
   15     | T_Str T_Lbracket T_Num T_Rbracket

   16 BodyReturn: Method Vars Statement Return

   17 Return: T_Return Expr T_Semicolon

   18 Vars: T_Var T_Identifier MoreVars T_Colon Type T_Semicolon Vars
   19     | /* empty */

   20 MoreVars: T_Comma T_Identifier MoreVars
   21         | /* empty */

   22 StatementP: Assignment
   23           | MethodCall
   24           | While
   25           | CodeBlock
   26           | IfWithElse

   27 Statement: StatementP Statement
   28          | /* empty */

   29 Assignment: LHS T_Assignment Expr T_Semicolon
   30           | LHS T_Assignment T_Stringtype T_Semicolon

   31 MethodCall: LHS T_Assignment T_Identifier T_Lparen FuncExpr T_Rparen T_Semicolon

   32 FuncExpr: Expr MoreExpr
   33         | /* empty */

   34 MoreExpr: T_Comma Expr MoreExpr
   35         | /* empty */

   36 LHS: T_Identifier
   37    | T_Identifier T_Lbracket Expr T_Rbracket
   38    | T_Dereference T_Identifier

   39 UnaryExpr: T_Minus Expr
   40          | T_Plus Expr
   41          | T_Num
   42          | T_True
   43          | T_False
   44          | T_Chartype
   45          | T_Identifier
   46          | T_Identifier T_Lbracket Expr T_Rbracket
   47          | T_Not UnaryExpr
   48          | T_Dereference Expr
   49          | T_Address LHS
   50          | T_Null

   51 Expr: Expr T_Plus Expr
   52     | Expr T_Minus Expr
   53     | Expr T_Times Expr
   54     | Expr T_Divide Expr
   55     | Expr T_Equals Expr
   56     | Expr T_LT Expr
   57     | Expr T_LTE Expr
   58     | Expr T_GT Expr
   59     | Expr T_GTE Expr
   60     | Expr T_NE Expr
   61     | Expr T_Or Expr
   62     | Expr T_And Expr
   63     | T_Lparen Expr T_Rparen
   64     | T_Not T_Lparen Expr T_Rparen
   65     | '|' Expr '|'
   66     | UnaryExpr

   67 IfWithElse: T_If T_Lparen Expr T_Rparen CodeBlock
   68           | T_If T_Lparen Expr T_Rparen CodeBlock T_Else CodeBlock

   69 While: T_While T_Lparen Expr T_Rparen CodeBlock

   70 CodeBlock: T_Lcurly Vars Statement T_Rcurly


Terminals, with rules where they appear

$end (0) 0
'|' (124) 65
error (256)
T_Bool (258) 14
T_Char (259) 11
T_Integer (260) 10
T_Str (261) 15
T_String (262)
T_Intptr (263) 13
T_Charptr (264) 12
T_If (265) 67 68
T_Else (266) 68
T_While (267) 69
T_Var (268) 18
T_Proc (269) 2
T_Return (270) 2 17
T_True (271) 42
T_False (272) 43
T_Null (273) 50
T_Semicolon (274) 8 17 18 29 30 31
T_Colon (275) 4 18
T_Lcurly (276) 2 70
T_Rcurly (277) 2 70
T_Lparen (278) 2 31 63 64 67 68 69
T_Rparen (279) 2 31 63 64 67 68 69
T_Lbracket (280) 15 37 46
T_Rbracket (281) 15 37 46
T_Num (282) 15 41
T_Stringtype (283) 30
T_Chartype (284) 44
T_Identifier (285) 2 4 6 18 20 31 36 37 38 45 46
T_Comma (286) 6 20 34
T_Assignment (287) 29 30 31
T_Or (288) 61
T_And (289) 62
T_Equals (290) 55
T_NE (291) 60
T_GT (292) 58
T_GTE (293) 59
T_LT (294) 56
T_LTE (295) 57
T_Minus (296) 39 52
T_Plus (297) 40 51
T_Divide (298) 54
T_Times (299) 53
T_Not (300) 47 64
T_Address (301) 49
T_Dereference (302) 38 48


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Start (50)
    on left: 1, on right: 0
Method (51)
    on left: 2 3, on right: 1 2 16
ParamList (52)
    on left: 4 5, on right: 2 8 9
MoreParams (53)
    on left: 6 7, on right: 4 6
ParamsAddl (54)
    on left: 8 9, on right: 4
Type (55)
    on left: 10 11 12 13 14 15, on right: 2 4 18
BodyReturn (56)
    on left: 16, on right: 2
Return (57)
    on left: 17, on right: 16
Vars (58)
    on left: 18 19, on right: 16 18 70
MoreVars (59)
    on left: 20 21, on right: 18 20
StatementP (60)
    on left: 22 23 24 25 26, on right: 27
Statement (61)
    on left: 27 28, on right: 16 27 70
Assignment (62)
    on left: 29 30, on right: 22
MethodCall (63)
    on left: 31, on right: 23
FuncExpr (64)
    on left: 32 33, on right: 31
MoreExpr (65)
    on left: 34 35, on right: 32 34
LHS (66)
    on left: 36 37 38, on right: 29 30 31 49
UnaryExpr (67)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50, on right: 47 66
Expr (68)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66,
    on right: 17 29 32 34 37 39 40 46 48 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 67 68 69
IfWithElse (69)
    on left: 67 68, on right: 26
While (70)
    on left: 69, on right: 24
CodeBlock (71)
    on left: 70, on right: 25 67 68 69


state 0

    0 $accept: . Start $end

    T_Proc  shift, and go to state 1

    $default  reduce using rule 3 (Method)

    Start   go to state 2
    Method  go to state 3


state 1

    2 Method: T_Proc . T_Identifier T_Lparen ParamList T_Rparen T_Return Type T_Lcurly BodyReturn T_Rcurly Method

    T_Identifier  shift, and go to state 4


state 2

    0 $accept: Start . $end

    $end  shift, and go to state 5


state 3

    1 Start: Method .

    $default  reduce using rule 1 (Start)


state 4

    2 Method: T_Proc T_Identifier . T_Lparen ParamList T_Rparen T_Return Type T_Lcurly BodyReturn T_Rcurly Method

    T_Lparen  shift, and go to state 6


state 5

    0 $accept: Start $end .

    $default  accept


state 6

    2 Method: T_Proc T_Identifier T_Lparen . ParamList T_Rparen T_Return Type T_Lcurly BodyReturn T_Rcurly Method

    T_Identifier  shift, and go to state 7

    $default  reduce using rule 5 (ParamList)

    ParamList  go to state 8


state 7

    4 ParamList: T_Identifier . MoreParams T_Colon Type ParamsAddl

    T_Comma  shift, and go to state 9

    $default  reduce using rule 7 (MoreParams)

    MoreParams  go to state 10


state 8

    2 Method: T_Proc T_Identifier T_Lparen ParamList . T_Rparen T_Return Type T_Lcurly BodyReturn T_Rcurly Method

    T_Rparen  shift, and go to state 11


state 9

    6 MoreParams: T_Comma . T_Identifier MoreParams

    T_Identifier  shift, and go to state 12


state 10

    4 ParamList: T_Identifier MoreParams . T_Colon Type ParamsAddl

    T_Colon  shift, and go to state 13


state 11

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen . T_Return Type T_Lcurly BodyReturn T_Rcurly Method

    T_Return  shift, and go to state 14


state 12

    6 MoreParams: T_Comma T_Identifier . MoreParams

    T_Comma  shift, and go to state 9

    $default  reduce using rule 7 (MoreParams)

    MoreParams  go to state 15


state 13

    4 ParamList: T_Identifier MoreParams T_Colon . Type ParamsAddl

    T_Bool     shift, and go to state 16
    T_Char     shift, and go to state 17
    T_Integer  shift, and go to state 18
    T_Str      shift, and go to state 19
    T_Intptr   shift, and go to state 20
    T_Charptr  shift, and go to state 21

    Type  go to state 22


state 14

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen T_Return . Type T_Lcurly BodyReturn T_Rcurly Method

    T_Bool     shift, and go to state 16
    T_Char     shift, and go to state 17
    T_Integer  shift, and go to state 18
    T_Str      shift, and go to state 19
    T_Intptr   shift, and go to state 20
    T_Charptr  shift, and go to state 21

    Type  go to state 23


state 15

    6 MoreParams: T_Comma T_Identifier MoreParams .

    $default  reduce using rule 6 (MoreParams)


state 16

   14 Type: T_Bool .

    $default  reduce using rule 14 (Type)


state 17

   11 Type: T_Char .

    $default  reduce using rule 11 (Type)


state 18

   10 Type: T_Integer .

    $default  reduce using rule 10 (Type)


state 19

   15 Type: T_Str . T_Lbracket T_Num T_Rbracket

    T_Lbracket  shift, and go to state 24


state 20

   13 Type: T_Intptr .

    $default  reduce using rule 13 (Type)


state 21

   12 Type: T_Charptr .

    $default  reduce using rule 12 (Type)


state 22

    4 ParamList: T_Identifier MoreParams T_Colon Type . ParamsAddl

    T_Semicolon   shift, and go to state 25
    T_Identifier  shift, and go to state 7

    $default  reduce using rule 5 (ParamList)

    ParamList   go to state 26
    ParamsAddl  go to state 27


state 23

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen T_Return Type . T_Lcurly BodyReturn T_Rcurly Method

    T_Lcurly  shift, and go to state 28


state 24

   15 Type: T_Str T_Lbracket . T_Num T_Rbracket

    T_Num  shift, and go to state 29


state 25

    8 ParamsAddl: T_Semicolon . ParamList

    T_Identifier  shift, and go to state 7

    $default  reduce using rule 5 (ParamList)

    ParamList  go to state 30


state 26

    9 ParamsAddl: ParamList .

    $default  reduce using rule 9 (ParamsAddl)


state 27

    4 ParamList: T_Identifier MoreParams T_Colon Type ParamsAddl .

    $default  reduce using rule 4 (ParamList)


state 28

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen T_Return Type T_Lcurly . BodyReturn T_Rcurly Method

    T_Proc  shift, and go to state 1

    $default  reduce using rule 3 (Method)

    Method      go to state 31
    BodyReturn  go to state 32


state 29

   15 Type: T_Str T_Lbracket T_Num . T_Rbracket

    T_Rbracket  shift, and go to state 33


state 30

    8 ParamsAddl: T_Semicolon ParamList .

    $default  reduce using rule 8 (ParamsAddl)


state 31

   16 BodyReturn: Method . Vars Statement Return

    T_Var  shift, and go to state 34

    $default  reduce using rule 19 (Vars)

    Vars  go to state 35


state 32

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen T_Return Type T_Lcurly BodyReturn . T_Rcurly Method

    T_Rcurly  shift, and go to state 36


state 33

   15 Type: T_Str T_Lbracket T_Num T_Rbracket .

    $default  reduce using rule 15 (Type)


state 34

   18 Vars: T_Var . T_Identifier MoreVars T_Colon Type T_Semicolon Vars

    T_Identifier  shift, and go to state 37


state 35

   16 BodyReturn: Method Vars . Statement Return

    T_If           shift, and go to state 38
    T_While        shift, and go to state 39
    T_Lcurly       shift, and go to state 40
    T_Identifier   shift, and go to state 41
    T_Dereference  shift, and go to state 42

    $default  reduce using rule 28 (Statement)

    StatementP  go to state 43
    Statement   go to state 44
    Assignment  go to state 45
    MethodCall  go to state 46
    LHS         go to state 47
    IfWithElse  go to state 48
    While       go to state 49
    CodeBlock   go to state 50


state 36

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen T_Return Type T_Lcurly BodyReturn T_Rcurly . Method

    T_Proc  shift, and go to state 1

    $default  reduce using rule 3 (Method)

    Method  go to state 51


state 37

   18 Vars: T_Var T_Identifier . MoreVars T_Colon Type T_Semicolon Vars

    T_Comma  shift, and go to state 52

    $default  reduce using rule 21 (MoreVars)

    MoreVars  go to state 53


state 38

   67 IfWithElse: T_If . T_Lparen Expr T_Rparen CodeBlock
   68           | T_If . T_Lparen Expr T_Rparen CodeBlock T_Else CodeBlock

    T_Lparen  shift, and go to state 54


state 39

   69 While: T_While . T_Lparen Expr T_Rparen CodeBlock

    T_Lparen  shift, and go to state 55


state 40

   70 CodeBlock: T_Lcurly . Vars Statement T_Rcurly

    T_Var  shift, and go to state 34

    $default  reduce using rule 19 (Vars)

    Vars  go to state 56


state 41

   36 LHS: T_Identifier .
   37    | T_Identifier . T_Lbracket Expr T_Rbracket

    T_Lbracket  shift, and go to state 57

    $default  reduce using rule 36 (LHS)


state 42

   38 LHS: T_Dereference . T_Identifier

    T_Identifier  shift, and go to state 58


state 43

   27 Statement: StatementP . Statement

    T_If           shift, and go to state 38
    T_While        shift, and go to state 39
    T_Lcurly       shift, and go to state 40
    T_Identifier   shift, and go to state 41
    T_Dereference  shift, and go to state 42

    $default  reduce using rule 28 (Statement)

    StatementP  go to state 43
    Statement   go to state 59
    Assignment  go to state 45
    MethodCall  go to state 46
    LHS         go to state 47
    IfWithElse  go to state 48
    While       go to state 49
    CodeBlock   go to state 50


state 44

   16 BodyReturn: Method Vars Statement . Return

    T_Return  shift, and go to state 60

    Return  go to state 61


state 45

   22 StatementP: Assignment .

    $default  reduce using rule 22 (StatementP)


state 46

   23 StatementP: MethodCall .

    $default  reduce using rule 23 (StatementP)


state 47

   29 Assignment: LHS . T_Assignment Expr T_Semicolon
   30           | LHS . T_Assignment T_Stringtype T_Semicolon
   31 MethodCall: LHS . T_Assignment T_Identifier T_Lparen FuncExpr T_Rparen T_Semicolon

    T_Assignment  shift, and go to state 62


state 48

   26 StatementP: IfWithElse .

    $default  reduce using rule 26 (StatementP)


state 49

   24 StatementP: While .

    $default  reduce using rule 24 (StatementP)


state 50

   25 StatementP: CodeBlock .

    $default  reduce using rule 25 (StatementP)


state 51

    2 Method: T_Proc T_Identifier T_Lparen ParamList T_Rparen T_Return Type T_Lcurly BodyReturn T_Rcurly Method .

    $default  reduce using rule 2 (Method)


state 52

   20 MoreVars: T_Comma . T_Identifier MoreVars

    T_Identifier  shift, and go to state 63


state 53

   18 Vars: T_Var T_Identifier MoreVars . T_Colon Type T_Semicolon Vars

    T_Colon  shift, and go to state 64


state 54

   67 IfWithElse: T_If T_Lparen . Expr T_Rparen CodeBlock
   68           | T_If T_Lparen . Expr T_Rparen CodeBlock T_Else CodeBlock

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 79


state 55

   69 While: T_While T_Lparen . Expr T_Rparen CodeBlock

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 80


state 56

   70 CodeBlock: T_Lcurly Vars . Statement T_Rcurly

    T_If           shift, and go to state 38
    T_While        shift, and go to state 39
    T_Lcurly       shift, and go to state 40
    T_Identifier   shift, and go to state 41
    T_Dereference  shift, and go to state 42

    $default  reduce using rule 28 (Statement)

    StatementP  go to state 43
    Statement   go to state 81
    Assignment  go to state 45
    MethodCall  go to state 46
    LHS         go to state 47
    IfWithElse  go to state 48
    While       go to state 49
    CodeBlock   go to state 50


state 57

   37 LHS: T_Identifier T_Lbracket . Expr T_Rbracket

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 82


state 58

   38 LHS: T_Dereference T_Identifier .

    $default  reduce using rule 38 (LHS)


state 59

   27 Statement: StatementP Statement .

    $default  reduce using rule 27 (Statement)


state 60

   17 Return: T_Return . Expr T_Semicolon

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 83


state 61

   16 BodyReturn: Method Vars Statement Return .

    $default  reduce using rule 16 (BodyReturn)


state 62

   29 Assignment: LHS T_Assignment . Expr T_Semicolon
   30           | LHS T_Assignment . T_Stringtype T_Semicolon
   31 MethodCall: LHS T_Assignment . T_Identifier T_Lparen FuncExpr T_Rparen T_Semicolon

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Stringtype   shift, and go to state 84
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 85
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 86


state 63

   20 MoreVars: T_Comma T_Identifier . MoreVars

    T_Comma  shift, and go to state 52

    $default  reduce using rule 21 (MoreVars)

    MoreVars  go to state 87


state 64

   18 Vars: T_Var T_Identifier MoreVars T_Colon . Type T_Semicolon Vars

    T_Bool     shift, and go to state 16
    T_Char     shift, and go to state 17
    T_Integer  shift, and go to state 18
    T_Str      shift, and go to state 19
    T_Intptr   shift, and go to state 20
    T_Charptr  shift, and go to state 21

    Type  go to state 88


state 65

   42 UnaryExpr: T_True .

    $default  reduce using rule 42 (UnaryExpr)


state 66

   43 UnaryExpr: T_False .

    $default  reduce using rule 43 (UnaryExpr)


state 67

   50 UnaryExpr: T_Null .

    $default  reduce using rule 50 (UnaryExpr)


state 68

   63 Expr: T_Lparen . Expr T_Rparen

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 89


state 69

   41 UnaryExpr: T_Num .

    $default  reduce using rule 41 (UnaryExpr)


state 70

   44 UnaryExpr: T_Chartype .

    $default  reduce using rule 44 (UnaryExpr)


state 71

   45 UnaryExpr: T_Identifier .
   46          | T_Identifier . T_Lbracket Expr T_Rbracket

    T_Lbracket  shift, and go to state 90

    $default  reduce using rule 45 (UnaryExpr)


state 72

   39 UnaryExpr: T_Minus . Expr

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 91


state 73

   40 UnaryExpr: T_Plus . Expr

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 92


state 74

   47 UnaryExpr: T_Not . UnaryExpr
   64 Expr: T_Not . T_Lparen Expr T_Rparen

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 93
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 94
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76

    UnaryExpr  go to state 95


state 75

   49 UnaryExpr: T_Address . LHS

    T_Identifier   shift, and go to state 41
    T_Dereference  shift, and go to state 42

    LHS  go to state 96


state 76

   48 UnaryExpr: T_Dereference . Expr

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 97


state 77

   65 Expr: '|' . Expr '|'

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 98


state 78

   66 Expr: UnaryExpr .

    $default  reduce using rule 66 (Expr)


state 79

   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   67 IfWithElse: T_If T_Lparen Expr . T_Rparen CodeBlock
   68           | T_If T_Lparen Expr . T_Rparen CodeBlock T_Else CodeBlock

    T_Rparen  shift, and go to state 99
    T_Or      shift, and go to state 100
    T_And     shift, and go to state 101
    T_Equals  shift, and go to state 102
    T_NE      shift, and go to state 103
    T_GT      shift, and go to state 104
    T_GTE     shift, and go to state 105
    T_LT      shift, and go to state 106
    T_LTE     shift, and go to state 107
    T_Minus   shift, and go to state 108
    T_Plus    shift, and go to state 109
    T_Divide  shift, and go to state 110
    T_Times   shift, and go to state 111


state 80

   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   69 While: T_While T_Lparen Expr . T_Rparen CodeBlock

    T_Rparen  shift, and go to state 112
    T_Or      shift, and go to state 100
    T_And     shift, and go to state 101
    T_Equals  shift, and go to state 102
    T_NE      shift, and go to state 103
    T_GT      shift, and go to state 104
    T_GTE     shift, and go to state 105
    T_LT      shift, and go to state 106
    T_LTE     shift, and go to state 107
    T_Minus   shift, and go to state 108
    T_Plus    shift, and go to state 109
    T_Divide  shift, and go to state 110
    T_Times   shift, and go to state 111


state 81

   70 CodeBlock: T_Lcurly Vars Statement . T_Rcurly

    T_Rcurly  shift, and go to state 113


state 82

   37 LHS: T_Identifier T_Lbracket Expr . T_Rbracket
   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Rbracket  shift, and go to state 114
    T_Or        shift, and go to state 100
    T_And       shift, and go to state 101
    T_Equals    shift, and go to state 102
    T_NE        shift, and go to state 103
    T_GT        shift, and go to state 104
    T_GTE       shift, and go to state 105
    T_LT        shift, and go to state 106
    T_LTE       shift, and go to state 107
    T_Minus     shift, and go to state 108
    T_Plus      shift, and go to state 109
    T_Divide    shift, and go to state 110
    T_Times     shift, and go to state 111


state 83

   17 Return: T_Return Expr . T_Semicolon
   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Semicolon  shift, and go to state 115
    T_Or         shift, and go to state 100
    T_And        shift, and go to state 101
    T_Equals     shift, and go to state 102
    T_NE         shift, and go to state 103
    T_GT         shift, and go to state 104
    T_GTE        shift, and go to state 105
    T_LT         shift, and go to state 106
    T_LTE        shift, and go to state 107
    T_Minus      shift, and go to state 108
    T_Plus       shift, and go to state 109
    T_Divide     shift, and go to state 110
    T_Times      shift, and go to state 111


state 84

   30 Assignment: LHS T_Assignment T_Stringtype . T_Semicolon

    T_Semicolon  shift, and go to state 116


state 85

   31 MethodCall: LHS T_Assignment T_Identifier . T_Lparen FuncExpr T_Rparen T_Semicolon
   45 UnaryExpr: T_Identifier .
   46          | T_Identifier . T_Lbracket Expr T_Rbracket

    T_Lparen    shift, and go to state 117
    T_Lbracket  shift, and go to state 90

    $default  reduce using rule 45 (UnaryExpr)


state 86

   29 Assignment: LHS T_Assignment Expr . T_Semicolon
   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Semicolon  shift, and go to state 118
    T_Or         shift, and go to state 100
    T_And        shift, and go to state 101
    T_Equals     shift, and go to state 102
    T_NE         shift, and go to state 103
    T_GT         shift, and go to state 104
    T_GTE        shift, and go to state 105
    T_LT         shift, and go to state 106
    T_LTE        shift, and go to state 107
    T_Minus      shift, and go to state 108
    T_Plus       shift, and go to state 109
    T_Divide     shift, and go to state 110
    T_Times      shift, and go to state 111


state 87

   20 MoreVars: T_Comma T_Identifier MoreVars .

    $default  reduce using rule 20 (MoreVars)


state 88

   18 Vars: T_Var T_Identifier MoreVars T_Colon Type . T_Semicolon Vars

    T_Semicolon  shift, and go to state 119


state 89

   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr
   63     | T_Lparen Expr . T_Rparen

    T_Rparen  shift, and go to state 120
    T_Or      shift, and go to state 100
    T_And     shift, and go to state 101
    T_Equals  shift, and go to state 102
    T_NE      shift, and go to state 103
    T_GT      shift, and go to state 104
    T_GTE     shift, and go to state 105
    T_LT      shift, and go to state 106
    T_LTE     shift, and go to state 107
    T_Minus   shift, and go to state 108
    T_Plus    shift, and go to state 109
    T_Divide  shift, and go to state 110
    T_Times   shift, and go to state 111


state 90

   46 UnaryExpr: T_Identifier T_Lbracket . Expr T_Rbracket

    T_True         shift, and go to state 65
    T_False        shift, and go to state 66
    T_Null         shift, and go to state 67
    T_Lparen       shift, and go to state 68
    T_Num          shift, and go to state 69
    T_Chartype     shift, and go to state 70
    T_Identifier   shift, and go to state 71
    T_Minus        shift, and go to state 72
    T_Plus         shift, and go to state 73
    T_Not          shift, and go to state 74
    T_Address      shift, and go to state 75
    T_Dereference  shift, and go to state 76
    '|'            shift, and go to state 77

    UnaryExpr  go to state 78
    Expr       go to state 121


state 91

   39 UnaryExpr: T_Minus Expr .
   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Divide  shift, and go to state 110
    T_Times   shift, and go to state 111

    $default  reduce using rule 39 (UnaryExpr)


state 92

   40 UnaryExpr: T_Plus Expr .
   51 Expr: Expr . T_Plus Expr
   52     | Expr . T_Minus Expr
   53     | Expr . T_Times Expr
   54     | Expr . T_Divide Expr
   55     | Expr . T_Equals Expr
   56     | Expr . T_LT Expr
   57     | Expr . T_LTE Expr
   58     | Expr . T_GT Expr
   59     | Expr . T_GTE Expr
   60     | Expr . T_NE Expr
   61     | Expr . T_Or Expr
   62     | Expr . T_And Expr

    T_Divide  shift, and go to state 110
    T_Times   shift, and go to state 111
